-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11, 15
-
Component/s: client-libs
-
b13
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8246565 | 13.0.4 | Philip Race | P4 | Resolved | Fixed | b04 |
| JDK-8243097 | 11.0.8-oracle | Philip Race | P4 | Resolved | Fixed | b04 |
| JDK-8242634 | 11.0.8 | Philip Race | P4 | Resolved | Fixed | b01 |
| JDK-8261569 | openjdk8u292 | Philip Race | P4 | Resolved | Fixed | b03 |
There is code in freetypeFontScaler.c that reads FREETYPE_PROPERTIES and parses it to see if the application is specifying the interpreter-version to use.
If so, JDK won't enforce its default.
The code that does this uses strstr, but unfortunately the arguments to strstr are reversed so you can't specify your preferred value.
All you can do is disable JDK setting its preferred value.
If so, JDK won't enforce its default.
The code that does this uses strstr, but unfortunately the arguments to strstr are reversed so you can't specify your preferred value.
All you can do is disable JDK setting its preferred value.
- backported by
-
JDK-8242634 Reversed arguments in call to strstr in freetype "debug" code.
-
- Resolved
-
-
JDK-8243097 Reversed arguments in call to strstr in freetype "debug" code.
-
- Resolved
-
-
JDK-8246565 Reversed arguments in call to strstr in freetype "debug" code.
-
- Resolved
-
-
JDK-8261569 Reversed arguments in call to strstr in freetype "debug" code.
-
- Resolved
-
- duplicates
-
JDK-8239890 Freetype bytecode interpreter override does not work
-
- Closed
-