8239091: Reversed arguments in call to strstr in freetype "debug" code

Reviewed-by: bpb